--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <style>
         /*just bg and body style*/
         body {
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background: linear-gradient(-45deg, #ea7957, #e73c7e, #23a6d5, #23d5ab);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
             height: 100vh;
@@ -79,7 +79,7 @@
             background-color: #A084E8 !important;
             transform: scale(1.05);
             border-radius: 75px !important;
-            width: 150px;
+            width: 250px;
         }
 
         label {
