--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
 
         /* Hover animation for the predict button */
         .btn-primary:hover {
-            background-color: #A084E8 !important;
+            background-color: #bea5ff !important;
             transform: scale(1.05);
             border-radius: 75px !important;
             width: 250px;
