--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="head" style="font-style: normal;">➡️PREDICT THE STROKE⬅️</h1>
+                <h1 class="head" style="font-style: normal; font-weight: bolder;">PREDICT THE STROKE</h1>
             </div>
         </div>
         <div class="row">
