Butoon hover animation
- Removed button hover animation

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,12 +75,12 @@
         }
 
         /* Hover animation for the predict button */
-        .btn-primary:hover {
+        /* .btn-primary:hover {
             background-color: #bea5ff !important;
             transform: scale(1.25);
             border-radius: 75px !important;
             width: 250px;
-        }
+        } */
 
         label {
             width: 50%;
