--- a/templates/index.html
+++ b/templates/index.html
@@ -133,7 +133,7 @@
                     <form action="{{ url_for('predict')}}" method="post" class="form-inline">
                         <div class="row">
                             <div class="col-md-6">
-                                <!-- <img class="image" src="https://i.ibb.co/tYF5kmW/pred-analysis.jpg" width="100%" height="100%" /> -->
+                                <img class="image" src="https://i.ibb.co/tYF5kmW/pred-analysis.jpg" width="100%" height="100%" />
                             </div>
                             <div class="col-md-6">
                                 <div class="container">
